<resources>
    <string name="app_name">ButtonBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="loading_text">Loading…</string>

    <string name="notification_channel_id">BuddyChannelId</string>
    <string name="notification_channel_name">My App Notifications</string>
    <string name="notification_channel_description">Notification Channel for My App</string>
    <string name="notification_title">New Message from %s</string>
    <string name="notification_content">Click to view message from %s</string>

    <string name="message_sent_toast">Message sent to %s</string>
    <string name="send_on_cooldown">Nerv nicht.</string>
    <string name="send_button">Senden</string>

    <string name="firstname_is_empty">Vorname darf nicht leer sein</string>
    <string name="lastname_is_empty">Nachname darf nicht leer sein</string>
    <string name="email_is_empty">Email darf nicht leer sein</string>
    <string name="email_wrong_format">Email im falschen Format</string>
    <string name="user_not_found">Benutzer nicht gefunden</string>
    <string name="pw_is_empty">Passwort darf nicht leer sein</string>
    <string name="pw_not_same">Passwort stimmt nicht überein</string>
    <string name="pw_length_too_short">Password must be at least 8 characters long</string>
    <string name="pw_missing_upper_case">Password must contain at least one uppercase letter</string>
    <string name="pw_missing_lower_case">Password must contain at least one lowercase letter</string>
    <string name="pw_missing_digit">Password must contain at least one digit</string>
    <string name="pw_missing_special">Password must contain at least one special character</string>

    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>

    <string name="info_title">Information</string>
    <string name="settings_title">Einstellungen</string>
    <string name="logout_title">Logout</string>

    <string name="login_title">Login</string>
    <string name="login_register_account">Noch kein Account?\nKlicken Sie hier um sich zu registrieren</string>
    <string name="register_title">Registrieren</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="email">Email</string>
    <string name="pw1_label">Passwort</string>
    <string name="pw2_label">Passwort wiederholen</string>

    <string name="profile_title">Profil</string>
    <string name="profile_qr_info">Mit diesem QR-Code können Sie von Buddys hinzugefügt werden</string>

    <string name="buddy_title">Buddy%s</string>
    <string name="buddy_no_messages">Ihr habt noch nicht an euch gedacht</string>

    <string name="buddies_loaded">Buddys geladen</string>
    <string name="buddies_title">Buddys</string>
    <string name="no_buddies">Du hast keine Freunde</string>
    <string name="no_buddy_found">Kein Buddy gefunden</string>
    <string name="select_time">Cooldown wählen</string>
    <string name="cooldown_receiving">Buddy kann dir alle %s Nachrichten senden ></string>
    <string name="cooldown_sending">Buddy kann alle %s Nachrichten bekommen</string>
    <string name="cooldown_receiving_always">Buddy kann dir jederzeit Nachrichten senden ></string>
    <string name="cooldown_sending_always">Buddy kann jederzeit Nachrichten bekommen</string>

    <string name="scan_title">Scan</string>
    <string name="grant_permission">Berechtigung erteilen</string>
    <string name="camera_permission_declined">Sie haben die Berechtigung für die Kamera permanent abgelehnt./nSie können in die Appeinstellungen gehen um Berechtigung zu geben.</string>
    <string name="camera_permission_asking">Um einen QR Code zu scannen, wird die Berechtigung die Kamera zu nutzen benötigt.</string>
    <string name="permission_needed">Berechtigung benötigt</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>